--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JQuery (XML+JSON)</title>
+	<script src="jquery.min.js"></script>
 	<script src="ap.js"></script>
 </head>
 <body>
-	<ul id="lista">
+	<div id="lista">
 		
-	</ul>
+	</div>
+	<div id="contenido">
+		
+	</div>
 </body>
 </html>
